Sun Dec 22 23:56:56 2013  Zachary Scott  <e@zzak.io>

	* lib/{rake,rdoc,rss}/*, test/rexml/test_listener.rb: [DOC] Fix typos
	  by @dvsuresh [Fixes GH-486] https://github.com/ruby/ruby/pull/486

Sun Dec 22 11:08:47 2013  Eric Hodel  <drbrain@segment7.net>

	* test/rubygems/test_gem_ext_builder.rb:  Fix warning due to ambiguous
	  expression.

Sun Dec 22 11:05:53 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/install_command.rb:  Restore gem install
	  --ignore-dependencies for remote gems
	* test/rubygems/test_gem_commands_install_command.rb:  Test for the
	  above.

Sun Dec 22 10:23:40 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc.rb:  Set RDoc to release version.

Sun Dec 22 10:19:07 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Set RubyGems to release version.

Sun Dec 22 10:16:08 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb (module Gem):  Fix comment for
	  Gem::load_path_insert_index.

Sun Dec 22 04:07:55 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (ruby_gc_set_params): don't show obsolete warnings for
	  RUBY_FREE_MIN/RUBY_HEAP_MIN_SLOTS if
	  RUBY_GC_HEAP_FREE_SLOTS/RUBY_GC_HEAP_INIT_SLOTS are given.
	  [Bug #9276]

Sat Dec 21 13:00:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c: remove unnecessary the source path from EEXIST error
	  messages and show the destination path only.  [ruby-core:59202]
	  [Feature #9263]

Sat Dec 21 12:37:19 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/resolv.rb (Resolv::Hosts#lazy_initialize): should not
	  consider encodings in hosts file.  [ruby-core:59239] [Bug #9273]

	* lib/resolv.rb (Resolv::Config.parse_resolv_conf): ditto.

Sat Dec 21 05:43:27 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/make-snapshot: replace RUBY_PATCHLEVEL_STR in version.h to
	  show users that this ruby is a preview/rc version.

Sat Dec 21 05:03:49 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (fake.rb): fixed wrong RUBY_PLATFORM, to correctly