@@ -86877,7 +86877,7 @@ Sun Feb  1 18:21:00 2004  Gavin Sinclair  <gsinclair@soyabean.com.au>
 Sun Feb  1 05:30:06 2004  Tanaka Akira  <akr@m17n.org>
 
 	* lib/open-uri.rb (URI::Generic#find_proxy): warn HTTP_PROXY.
-	 raise an errror on non-http proxy URI.
+	 raise an error on non-http proxy URI.
 	 (OpenURI::Buffer#<<): make a tempfile binmode.  [ruby-talk:90793]
 
 Sun Feb  1 00:57:41 2004  Kouhei Sutou  <kou@cozmixng.org>
